<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCd869UpHQ_Et5BlppfD1vCGKKPsyVEewk</string>
    <string name="app_name">Drop</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="delete">Delete</string>
    <string name="image_description">Listing Image</string>
    <string name="title_cannot_be_empty">Please enter a title before saving</string>
    <string name="uploading">Uploading…</string>
    <string name="unexpected_error">An unexpected error occurred</string>

    <string name="full_image">Full screen image</string>

    <!--Profile Fragment-->
    <string name="profile">Profile</string>
    <string name="prof_img_desc">Profile Image</string>
    <string name="prof_name">Public Name</string>
    <string name="username">Username</string>

    <string name="log_out">Logout</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="show_map">Show map</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="friends">Friends</string>
    <string name="name">Name</string>
    <string name="no_drops">It doesn\'t seem like there are any Drops near you. Be the first to post one!</string>
    <string name="username_used">Username in use. Please choose another.</string>
    <string name="ok">OK</string>

    <string name="search_hint">Search for people</string>
    <string name="username_not_found">Username not found</string>
</resources>
