<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/submit_drop"
        android:icon="@drawable/ic_send_white_24px"
        android:title="@string/submit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save_drop"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_drop"
        android:icon="@drawable/ic_mode_edit_white_24px"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_drop"
        android:icon="@drawable/ic_delete_white_24px"
        android:title="@string/delete" />
</menu>