<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/toggle_map"-->
        <!--android:icon="@drawable/ic_place_white_24dp"-->
        <!--android:title="@string/show_map"-->
        <!--app:showAsAction="always" />-->
    <item
        android:id="@+id/friends"
        android:icon="@drawable/ic_group_white_24dp"
        android:title="@string/friends"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_profile"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_profile"
        android:icon="@drawable/ic_mode_edit_white_24px"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/log_out"
        android:title="@string/log_out" />
</menu>