<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/listing_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_image_height"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/ic_photo_camera_black_24px" />

                <ImageView
                    android:id="@+id/drop_profile_image"
                    android:layout_width="@dimen/listing_prof_dimen"
                    android:layout_height="@dimen/listing_prof_dimen"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/listing_image"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:background="@color/primary_light"
                    android:contentDescription="@string/prof_img_desc"
                    android:src="@drawable/ic_face_white_24px" />

                <ViewSwitcher
                    android:id="@+id/description_switcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/listing_image"
                    android:layout_toEndOf="@+id/drop_profile_image"
                    android:layout_toRightOf="@+id/drop_profile_image"
                    android:inAnimation="@anim/grow_fade_in"
                    android:outAnimation="@anim/shrink_fade_out">

                    <TextView
                        android:id="@+id/listing_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_margin"
                        android:text="@string/hint_description"
                        android:textSize="@dimen/listing_desc_size" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/listing_input_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_description" />
                    </android.support.design.widget.TextInputLayout>
                </ViewSwitcher>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/comments_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <include layout="@layout/fragment_comments" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/new_comment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/comment_edit_text_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/comment_submit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>
</LinearLayout>
