<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_image_height">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_image_height"
        android:contentDescription="@string/image_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/listing_item_details_background">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/listing_padding"
            android:text="@string/hint_title"
            android:textSize="@dimen/listing_title_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/item_title"
            android:padding="@dimen/listing_padding"
            android:text="@string/hint_description"
            android:textSize="@dimen/listing_desc_size"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/item_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/item_distance_size"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/item_timestamp_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingEnd="@dimen/item_timestamp_padding"
            android:paddingLeft="@dimen/item_timestamp_padding"
            android:paddingRight="@dimen/item_timestamp_padding"
            android:paddingStart="@dimen/item_timestamp_padding"
            android:textSize="@dimen/item_timestamp_size"/>

        <TextView
            android:id="@+id/item_timestamp_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/item_timestamp_padding"
            android:paddingEnd="@dimen/item_timestamp_padding"
            android:paddingLeft="@dimen/item_timestamp_padding"
            android:paddingRight="@dimen/item_timestamp_padding"
            android:paddingStart="@dimen/item_timestamp_padding"
            android:textSize="@dimen/item_timestamp_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divider"/>

</RelativeLayout>