<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.maps.MapView
            android:id="@+id/listing_map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_view_height"
            android:layout_alignParentTop="true"
            map:liteMode="true"
            map:mapType="normal"/>

        <View
            android:id="@+id/listing_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/listing_map"
            android:background="@color/accent"/>

        <ImageView
            android:id="@+id/listing_image"
            android:layout_width="@dimen/listing_image_dimen"
            android:layout_height="@dimen/listing_image_dimen"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/listing_divider"
            android:contentDescription="@string/image_description"/>

        <TextView
            android:id="@+id/listing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listing_divider"
            android:layout_toEndOf="@id/listing_image"
            android:layout_toRightOf="@id/listing_image"
            android:padding="@dimen/listing_padding"
            android:text="@string/hint_title"
            android:textSize="@dimen/listing_title_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/listing_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listing_title"
            android:layout_toEndOf="@id/listing_image"
            android:layout_toRightOf="@id/listing_image"
            android:padding="@dimen/listing_padding"
            android:text="@string/hint_description"
            android:textSize="@dimen/listing_desc_size"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/listing_input_title_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listing_map"
            android:layout_margin="16dp"
            android:layout_toEndOf="@id/listing_image"
            android:layout_toRightOf="@id/listing_image">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/listing_input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/listing_input_desc_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listing_input_title_wrapper"
            android:layout_margin="16dp"
            android:layout_toEndOf="@id/listing_image"
            android:layout_toRightOf="@id/listing_image">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/listing_input_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
</ScrollView>